[package]
name = "touchx"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Better touch. Efficient file creation with templates."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
xdg = "^2.5"